# ergodic_sketching_ros

./: .gitignore  .gitmodules  README.md
.reuse/: dep5
.reuse/templates/: idiap_template.jinja2
ergodic_sketching/: .clang-format  .cppcheck-suppressions  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
ergodic_sketching/assets/writing/: 1.txt  2.txt  5.txt  8.txt  sep.txt  signature.txt
ergodic_sketching/cmake/: ergodic_sketchingConfig.cmake
ergodic_sketching/config/: drozbot_config_lio.yaml  drozbot_config_prob.yaml
ergodic_sketching/dependencies/sackmesser/: CMakeLists.txt  package.xml
ergodic_sketching/dependencies/sackmesser/cmake/: sackmesser-config.cmake  sackmesser-extras.cmake.in  sackmesser-packages.cmake
ergodic_sketching/dependencies/sackmesser/src/: CMakeLists.txt
ergodic_sketching/dependencies/sackmesser/src/sackmesser/: CMakeLists.txt  CallbackHandler.hpp  ClassFactory.hpp  ConfigurationServer.cpp  ConfigurationServer.hpp  Interface.cpp  Interface.hpp  Logger.cpp  Logger.hpp  Visualiser.cpp  Visualiser.hpp  sackmesser_package_config.h.in  utility.cpp  utility.hpp
ergodic_sketching/dependencies/sackmesser/src/sackmesser_runtime/: CMakeLists.txt  CallbackHandler.hpp  ConfigurationServerYAML.cpp  ConfigurationServerYAML.hpp  Interface.cpp  Interface.hpp
ergodic_sketching/dependencies/sackmesser/src/sackmesser_runtime/impl/: CMakeLists.txt  ConfigurationServerYAML.cpp  ConfigurationServerYAML.hpp
ergodic_sketching/include/ergodic_sketching/: AgentConfiguration.hpp  AgentInitialization.hpp  Camera.hpp  CameraConfiguration.hpp  Configuration.hpp  Display.hpp  ErgodicAgent.hpp  ErgodicControl.hpp  ErgodicSketching.hpp  HeatEquationCoverage.hpp  ImageProcessing.hpp  RobotDrawing.hpp  Serialization.hpp  SketchPipeline.hpp  SpectralMultiscaleCoverage.hpp  TrajectoryUtils.hpp  Visualisation.hpp
ergodic_sketching/src/: AgentInitialization.cpp  Camera.cpp  Display.cpp  ErgodicAgent.cpp  ErgodicControl.cpp  ErgodicSketching.cpp  HeatEquationCoverage.cpp  ImageProcessing.cpp  RobotDrawing.cpp  Serialization.cpp  SketchPipeline.cpp  SpectralMultiscaleCoverage.cpp  TrajectoryUtils.cpp
ergodic_sketching_msgs/: CMakeLists.txt  package.xml
ergodic_sketching_msgs/action/: Planner.action
ergodic_sketching_msgs/srv/: sketch.srv
ergodic_sketching_ros/: CMakeLists.txt  package.xml
ergodic_sketching_ros/assets/writing/: 0.txt  3.txt  4.txt  6.txt  7.txt  9.txt  signature_old.txt
ergodic_sketching_ros/config/: drozbot_config_iiwa.yaml  ilqr_planner_config_iiwa.yaml  ilqr_planner_config_lio.yaml  ilqr_planner_config_prob.yaml
ergodic_sketching_ros/descriptions/: iiwa_drawing.urdf.xacro  lio_drawing.urdf.xacro  prob_drawing.urdf.xacro
ergodic_sketching_ros/descriptions/meshes/: drawing_paper.stl
ergodic_sketching_ros/include/ergodic_sketching_ros/: Planner.hpp
ergodic_sketching_ros/launch/: ergodic_sketching.launch  iiwa_drawing.launch.py  kuka_sim.launch  lio_sim.launch  prob_sim.launch
ergodic_sketching_ros/rviz/: config.rviz
ergodic_sketching_ros/scripts/: analyze_logs.py  ik_marker_node.py  ik_node.py  prob_draw.py  replay_joint_states.py  rob_draw.py  robot_sketch.py
ergodic_sketching_ros/src/: Planner.cpp  ergodic_sketching_ros.cpp  ilqr_planner_ros.cpp
