<!--
SPDX-FileCopyrightText: 2023 Idiap Research Institute <contact@idiap.ch>

SPDX-FileContributor: Jeremy Maceiras  <jeremy.maceiras@idiap.ch>

SPDX-License-Identifier: GPL-3.0-only
-->

<package format="2">
    <name>ergodic_sketching_msgs</name>
    <version>0.0.1</version>
    <description>etgodic_sketching_ros package</description>
    <maintainer email="jeremy.maceiras@idiap.ch">Jérémy Maceiras</maintainer>
    <license>GPLv3</license>
   
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>action_msgs</depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>

</package>
