<!--
SPDX-FileCopyrightText: 2023 Idiap Research Institute <contact@idiap.ch>

SPDX-FileContributor: Jeremy Maceiras  <jeremy.maceiras@idiap.ch>

SPDX-License-Identifier: GPL-3.0-only
-->

<package format="2">
    <name>ergodic_sketching_ros</name>
    <version>0.0.1</version>
    <description>etgodic_sketching_ros package</description>
    <maintainer email="jeremy.maceiras@idiap.ch">Jérémy Maceiras</maintainer>
    <license>GPLv3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>ergodic_sketching</depend>
    <depend>xacro</depend>
    <depend>ilqr_planner</depend>
    <depend>cv_bridge</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>ergodic_sketching_msgs</depend>
    <depend>rviz</depend>
    <depend>joint_state_publisher</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>robot_state_publisher</depend>
</package>