<?xml version="1.0"?>
<!--
SPDX-FileCopyrightText: 2023 Idiap Research Institute <contact@idiap.ch>

SPDX-FileContributor: Jeremy Maceiras  <jeremy.maceiras@idiap.ch>

SPDX-License-Identifier: GPL-3.0-only
-->
<package format="3">
    <name>ergodic_sketching_ros</name>
    <version>0.0.1</version>
    <description>etgodic_sketching_ros package</description>
    <maintainer email="jeremy.maceiras@idiap.ch">Jérémy Maceiras</maintainer>
    <license>GPLv3</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_components</depend>

    <depend>ergodic_sketching</depend>
    <depend>xacro</depend>
    <depend>ilqr_planner</depend>
    <depend>cv_bridge</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>ergodic_sketching_msgs</depend>
    <depend>rviz</depend>
    <depend>joint_state_publisher</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>robot_state_publisher</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>